--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.1",
+    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^6.0.6",
     "scp2": "^0.5.0",
     "style-loader": "^0.20.2",
