添加：1.优化编译速度；2.优化配置文件；问题：1.文件改动会触发vendor的打包行为；2.dev prod的配置需要重新设定

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
         "eqeqeq":1,
         "no-eval":1,
         "no-new-wrappers":1,
-        "comma-dangle":1
+        "comma-dangle":1,
+        "no-console":1
     },
     "extends": ["eslint:recommended", "plugin:react/recommended"]
     
