--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tree": "tree -L 4 -I 'node_modules' > readme.txt",
     "analyz": "npm_config_report=true npm run build"
   },
-  "sideEffects":false,
+  "sideEffects": false,
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -29,6 +29,7 @@
     "json-server": "^0.12.2",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
+    "mini-css-extract-plugin": "^0.4.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.1",
