--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.config.prod.js",
     "start": "node ./build/dev-server.js",
     "tree": "tree -L 4 -I 'node_modules' > readme.txt",
-    "analyz": "npm_config_report=true npm run build"
+    "analyz": "npm_config_report=true npm run build",
+    "cdn": "node ./build/cdn.js",
+    "porter": "./build/porter.sh dist"
   },
   "sideEffects": false,
   "devDependencies": {
@@ -38,6 +40,7 @@
     "scp2": "^0.5.0",
     "style-loader": "^0.20.2",
     "tapable": "^1.0.0",
+    "tinypng-webpack-plugin": "^2.0.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^0.6.2",
     "webpack": "^4.6.0",
@@ -53,12 +56,14 @@
     "@lizhife/lz-jssdk": "^1.0.2",
     "alloylever": "^1.0.3",
     "antd-mobile": "^2.1.8",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.7.0",
     "babel-runtime": "^6.26.0",
+    "inquirer": "^6.2.0",
+    "qs": "^6.5.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lifecycle": "^1.0.0",
-    "request": "git+https://github.com/tamamaxox/request.git",
     "reqwest": "^2.0.5"
   }
 }
