--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lifecycle": "^1.0.0",
+    "react-router-dom": "^4.3.1",
     "reqwest": "^2.0.5"
   }
 }
