--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "postcss-loader": "^2.1.1",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^6.0.6",
-    "scp2": "^0.5.0",
     "style-loader": "^0.20.2",
     "tapable": "^1.0.0",
     "tinypng-webpack-plugin": "^2.0.0",
@@ -45,17 +44,14 @@
     "url-loader": "^0.6.2",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.12.0",
-    "webpack-cli": "^2.0.9",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1",
     "webpack-merge": "^4.1.2",
     "webpack-px-to-rem": "^0.1.1"
   },
   "dependencies": {
-    "@lizhife/lizhi-iconfont": "^2.1.17",
-    "@lizhife/lz-jssdk": "^1.0.2",
     "alloylever": "^1.0.3",
-    "antd-mobile": "^2.1.8",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.7.0",
     "babel-runtime": "^6.26.0",
@@ -64,7 +60,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lifecycle": "^1.0.0",
-    "react-router-dom": "^4.3.1",
-    "reqwest": "^2.0.5"
+    "react-router-dom": "^4.3.1"
   }
 }
