--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "alloylever": "^1.0.3",
     "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-plugin-import": "^1.7.0",
     "babel-runtime": "^6.26.0",
     "inquirer": "^6.2.0",
@@ -60,6 +61,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lifecycle": "^1.0.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "webpack-remove-block-loader": "^1.0.2"
   }
 }
