--- a/package.json
+++ b/package.json
@@ -49,20 +49,20 @@
     "webpack-hot-middleware": "^2.22.1",
     "webpack-merge": "^4.1.2",
     "webpack-px-to-rem": "^0.1.1",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^4.3.1",
+    "babel-plugin-import": "^1.7.0",
+    "babel-runtime": "^6.26.0",
+    "webpack-remove-block-loader": "^1.0.2"
   },
   "dependencies": {
     "alloylever": "^1.0.3",
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
-    "babel-plugin-import": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "inquirer": "^6.2.0",
+    "prop-types": "^15.7.2",
     "qs": "^6.5.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lifecycle": "^1.0.0",
-    "react-router-dom": "^4.3.1",
-    "webpack-remove-block-loader": "^1.0.2"
+    "react-router-dom": "^4.3.1"
   }
 }
