--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,10 @@
 {
-    "presets":[
-        "es2015", 
-        "stage-0", 
-        "react"
+    "presets": [
+        "@babel/preset-env", 
+        "@babel/preset-react"
     ],
     "plugins":[
-        "babel-plugin-transform-runtime",
-        ["import",{"libraryName":"antd-mobile","style":"css"}]
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
     ]
 }
