--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack -wd --config ./build/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.config.prod.js",
+    "build": "cross-env NODE_ENV=production rm -rf ./build/dist &&  webpack --config ./build/webpack.config.prod.js",
     "start": "node ./build/dev-server.js",
     "tree": "tree -L 4 -I 'node_modules' > readme.txt",
     "analyz": "npm_config_report=true npm run build",
@@ -10,59 +10,53 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "cross-env": "^5.1.3",
-    "cross-spawn": "^6.0.5",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.8.2",
-    "express": "^4.16.3",
-    "file-loader": "^1.1.10",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "json-server": "^0.12.2",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.6",
-    "mini-css-extract-plugin": "^0.4.2",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.1",
-    "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "tapable": "^1.0.0",
+    "inquirer": "^6.5.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "resolve-url-loader": "^3.1.0",
+    "speed-measure-webpack-plugin": "^1.3.1",
+    "style-loader": "^1.0.0",
     "tinypng-webpack-plugin": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.12.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
-    "webpack-merge": "^4.1.2",
-    "webpack-px-to-rem": "^0.1.1",
-    "workbox-webpack-plugin": "^4.3.1",
-    "babel-plugin-import": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "webpack-remove-block-loader": "^1.0.2"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.1",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
-    "alloylever": "^1.0.3",
-    "axios": "^0.18.0",
-    "axios-mock-adapter": "^1.16.0",
-    "prop-types": "^15.7.2",
-    "qs": "^6.5.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-lifecycle": "^1.0.0",
-    "react-router-dom": "^4.3.1"
-  }
+    "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
+    "qs": "^6.7.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "Android >= 3.2",
+    "Firefox >= 20",
+    "iOS 7"
+  ]
 }
