--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
+    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
