--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.5.1",
+    "jsfunc": "^0.1.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "open": "^6.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
