--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "rm -rf ./dist && webpack -wd --config ./build/webpack.config.dev.js",
     "build:dev": "rm -rf ./dist &&  webpack --env.NODE_ENV=dev --config ./build/webpack.config.prod.js",
     "build:pre": "rm -rf ./dist &&  webpack --env.NODE_ENV=pre --config ./build/webpack.config.prod.js",
-    "build:prod": "rm -rf ./dist &&  webpack --env.NODE_ENV=product --config ./build/webpack.config.prod.js",
+    "build:prod": "rm -rf ./dist &&  webpack --env.NODE_ENV=prod --config ./build/webpack.config.prod.js",
     "start": "node ./build/dev-server.js",
     "tree": "tree -L 4 -I 'node_modules' > readme.txt",
     "analyz": "npm_config_report=true npm run build:prod",
@@ -45,10 +45,10 @@
     "tinypng-webpack-plugin": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
-    "webpack": "^4.39.1",
+    "webpack": "^4.39.0",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-middleware": "^3.7.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
