--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.12.7",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-loader": "^2.2.1",
+    "eslint": "^7.16.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-webpack-plugin": "^2.4.1",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
